--- a/views/store.html
+++ b/views/store.html
@@ -54,11 +54,10 @@
     <nav>
       <button id="toggleButton"><i class="fa fa-bars"></i></button>
       <div class="hidden">
-        <a href="/">Homepage</a><span class="bordering"></span>
-        <a href="/store" id="active">Stores</a>
-        <span class="bordering"></span> <a href="/delivery">Services</a>
-        <span class="bordering"></span>
-        <a href="/contactus" style="width: auto; padding: 2.2vh 1.5vh">About & Contact</a>
+        <a href="/">ပင်မ</a><span class="bordering"></span>
+        <a href="/store" id="active">စတိုး</a><span class="bordering"></span>
+        <a href="/delivery">ဝန်​ဆောင်မှု</a><span class="bordering"></span>
+        <a href="/contactus" style="width: auto; padding: 2.2vh 1.5vh">အ​ကြောင်း|ဆက်သွယ်ရန်</a>
       </div>
     </nav>
   </header>
@@ -113,7 +112,7 @@
       <div class="product">
         <img src="imgs/item_photos/P05.jpg" alt="product-image" />
         <h4>Forever Garcinia Plus (အဆီကျဆေး)</h4>
-        <p>............</p>
+
         <a href="/items/P05"><button>အသေးစိတ်ကြည့်ရှုပါ။</button></a>
       </div>
 
@@ -141,7 +140,7 @@
       <div class="product reveal">
         <img src="imgs/item_photos/P09.jpg" alt="product-image" />
         <h4>Forever Aloe Berry (ရှားစောင်းဘယ်ရီ)</h4>
-        <p>............</p>
+
         <a href="/items/P09"><button>အသေးစိတ်ကြည့်ရှုပါ။</button></a>
       </div>
 
@@ -169,7 +168,7 @@
       <div class="product reveal">
         <img src="imgs/item_photos/P13.jpg" alt="product-image" />
         <h4>LANCÔME (မျက်နှာဂျီးချွတ်)</h4>
-        <p>............</p>
+
         <a href="/items/P13"><button>အသေးစိတ်ကြည့်ရှုပါ။</button></a>
       </div>
 
@@ -197,7 +196,7 @@
       <div class="product reveal">
         <img src="imgs/item_photos/P17.jpg" alt="product-image" />
         <h4>Forever Aloe Freedom (လိမ္မော်, စပျစ်ရှားစောင်း/ရှားပြာ)</h4>
-        <p>............</p>
+
         <a href="/items/P17"><button>အသေးစိတ်ကြည့်ရှုပါ။</button></a>
       </div>
 
@@ -225,7 +224,7 @@
       <div class="product reveal">
         <img src="imgs/item_photos/P21.jpg" alt="product-image" />
         <h4>Forever Aloe Sunscreen</h4>
-        <p>............</p>
+
         <a href="/items/P21"><button>အသေးစိတ်ကြည့်ရှုပါ။</button></a>
       </div>
 
@@ -253,7 +252,7 @@
       <div class="product reveal">
         <img src="imgs/item_photos/P25.jpg" alt="product-image" />
         <h4>Forever Aloe Scrub (ဂျီးချွတ်)</h4>
-        <p>............</p>
+
         <a href="/items/P25"><button>အသေးစိတ်ကြည့်ရှုပါ။</button></a>
       </div>
 
@@ -281,7 +280,7 @@
       <div class="product reveal">
         <img src="imgs/item_photos/P29.jpg" alt="product-image" />
         <h4>Aloe Propolis Créam (အမာရွတ်, တင်းတိတ်)</h4>
-        <p>............</p>
+
         <a href="/items/P29"><button>အသေးစိတ်ကြည့်ရှုပါ။</button></a>
       </div>
 
@@ -309,7 +308,7 @@
       <div class="product reveal">
         <img src="imgs/item_photos/P33.jpg" alt="product-image" />
         <h4>SK-ll Essence</h4>
-        <p>............</p>
+
         <a href="/items/P33"><button>အသေးစိတ်ကြည့်ရှုပါ။</button></a>
       </div>
 
@@ -337,7 +336,7 @@
       <div class="product reveal">
         <img src="imgs/item_photos/P37.jpg" alt="product-image" />
         <h4>Forever Lean (ဆီးချိုအဆီချ)</h4>
-        <p>............</p>
+
         <a href="/items/P37"><button>အသေးစိတ်ကြည့်ရှုပါ။</button></a>
       </div>
 
@@ -365,7 +364,7 @@
       <div class="product reveal">
         <img src="imgs/item_photos/P41.jpg" alt="product-image" />
         <h4>Forever infinite firming complex (ကော်လဂျင်)</h4>
-        <p>............</p>
+
         <a href="/items/P41"><button>အသေးစိတ်ကြည့်ရှုပါ။</button></a>
       </div>
 
@@ -393,7 +392,7 @@
       <div class="product reveal">
         <img src="imgs/item_photos/P45.jpg" alt="product-image" />
         <h4>Aloe Jojoba Shampoo (ခေါင်းလျှော်ရည်)</h4>
-        <p>............</p>
+
         <a href="/items/P45"><button>အသေးစိတ်ကြည့်ရှုပါ။</button></a>
       </div>
 
@@ -421,7 +420,7 @@
       <div class="product reveal">
         <img src="imgs/item_photos/P49.jpg" alt="product-image" />
         <h4>Forever Aloe Activator (မျက်နှာသန့်စင်)</h4>
-        <p>............</p>
+
         <a href="/items/P49"><button>အသေးစိတ်ကြည့်ရှုပါ။</button></a>
       </div>
 
@@ -449,7 +448,7 @@
       <div class="product reveal">
         <img src="imgs/item_photos/P53.jpg" alt="product-image" />
         <h4>Forever infinite hydrating cleanser (မျက်နှာသစ်)</h4>
-        <p>............</p>
+
         <a href="/items/P53"><button>အသေးစိတ်ကြည့်ရှုပါ။</button></a>
       </div>
 
