--- a/views/items.ejs
+++ b/views/items.ejs
@@ -88,15 +88,21 @@
     </div>
     <footer>
       <div class="footer1">
+        <h1>ShweDuWun</h1>
+        <br />
+        <h3>Medical Product Distributor</h3>
+      </div>
+
+      <div class="footer2">
         <ul>
-          <h1>ShweDuWun</h1>
+          <li><a href="#">Pages</a></li>
           <br />
           <li><a href="#">stores</a></li>
           <li><a href="#">services</a></li>
           <li><a href="#">about</a></li>
           <li><a href="#">contact</a></li>
           <br />
-          <li><a href="#">Contact2WebsiteDevelopers</a></li>
+          <li id="smallertext"><a href="#">Contact2WebsiteDeveloper</a></li>
         </ul>
       </div>
       <div class="footer3">
@@ -105,11 +111,22 @@
           <br />
           <button type="submit">Subscribe</button>
         </font>
+
         <ul class="icons">
-          <li><i class="fa-brands fa-facebook fa-beat"></i></li>
-          <li><i class="fa-brands fa-facebook-messenger fa-fade"></i></li>
-          <li><i class="fa-solid fa-envelope fa-flip"></i></li>
-          <li><i class="fa-brands fa-youtube fa-bounce"></i></li>
+          <li>
+            <a href="#"><i class="fa-brands fa-facebook fa-beat"></i></a>
+          </li>
+          <li>
+            <a href="#"
+              ><i class="fa-brands fa-facebook-messenger fa-fade"></i
+            ></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-solid fa-envelope fa-flip"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-brands fa-youtube fa-bounce"></i></a>
+          </li>
         </ul>
       </div>
       <div class="footer4">
