--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -11,7 +11,7 @@
 .mainpage {
   width: 80%;
   height: 550px;
-  margin-top: 45px;
+  margin-top: 15vh;
   margin-left: 10%;
   border-radius: 20px;
   margin-right: 15%;
@@ -19,6 +19,7 @@
   display: flex;
   flex-direction: row;
 }
+
 .mainpage2 {
   flex: 40%;
   height: inherit;
@@ -27,19 +28,22 @@
   color: rgba(0, 136, 169, 1);
   font-size: 35px;
   font-family: "Lobster", cursive;
-  padding: 0 0 6% 0;
+  padding: 3vh 0 6px 0;
   position: relative;
 }
+
 #borderleft {
   margin-left: -34px;
   position: absolute;
   border-left: 4px dashed rgb(9, 239, 189);
-  top: 12%;
+  top: 10%;
   height: 45vh;
 }
+
 .mainpage2 p {
   padding-top: -15px;
 }
+
 .mainpage3 {
   flex: 60%;
   height: inherit;
@@ -47,7 +51,7 @@
   padding: 10% 0 0 8%;
   text-align: center;
   color: rgba(0, 136, 169, 1);
-  font-size: 24px;
+  font-size: 21px;
   font-family: "Fjalla One", sans-serif;
   animation: shadowmove 5s infinite;
   padding-right: 0%;
@@ -59,11 +63,13 @@
     text-shadow: 10px 10px 30px rgb(80, 235, 127);
   }
 }
+
 .mainpage3 h3 {
   letter-spacing: 1.5px;
   line-height: 35px;
   margin-top: 2%;
 }
+
 .dttimg {
   position: relative;
   cursor: pointer;
@@ -82,6 +88,7 @@
   border: 4px solid black;
   border-radius: 0 0 25px 25px;
 }
+
 .toShop a {
   text-decoration: none;
   font-size: 1.2em;
@@ -93,6 +100,7 @@
   grid-column: 1 / span 2;
   transition: 400ms linear;
 }
+
 .toShop a:hover {
   background-color: rgb(19, 171, 221);
   color: white;
@@ -109,12 +117,14 @@
   background-size: 100% 90%;
   background-repeat: no-repeat;
 }
+
 .cut {
   height: 80%;
   width: 91%;
   overflow: hidden;
   margin: auto auto;
 }
+
 .images {
   margin: 6% 0;
   height: 100%;
@@ -137,15 +147,19 @@
   0% {
     transform: translateX(0);
   }
+
   25% {
     transform: translateX(-25%);
   }
+
   50% {
     transform: translateX(-50%);
   }
+
   75% {
     transform: translateX(-75%);
   }
+
   100% {
     transform: translateX(0);
   }
@@ -181,6 +195,7 @@
   background-size: 450px;
   padding: 35px 5px 0 10px;
 }
+
 .box1 {
   background-image: url("../imgs/iconsdesign.png");
 }
@@ -190,12 +205,14 @@
   width: 250px;
   float: right;
 }
+
 .box p {
   font-size: 2em;
   font-family: "Fjalla One", sans-serif;
   line-height: 1.6em;
   text-align: justify;
 }
+
 .box a {
   text-decoration: none;
   padding: 1vh 2vh;
@@ -204,6 +221,7 @@
   font-size: 1.2em;
   transition: 200ms ease-in-out;
 }
+
 .box a:hover {
   color: white;
   background-color: rgb(230, 12, 230);
