--- a/views/delivery.html
+++ b/views/delivery.html
@@ -65,16 +65,9 @@
   <section class="brief">
     <h1 id="deliveryh1">Delivery?</h1>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque odio
-      explicabo consequuntur provident facere minus praesentium, aut qui
-      ducimus debitis, hic molestias esse eligendi quidem temporibus vero
-      veniam repellendus enim! Lorem ipsum dolor sit amet consectetur
-      adipisicing elit. Maiores ad maxime sed expedita saepe obcaecati.
-      Voluptas distinctio, eveniet quia, delectus voluptatibus nostrum quaerat
-      voluptates qui tenetur placeat est laboriosam veniam. Lorem ipsum dolor
-      sit amet consectetur adipisicing elit. Reprehenderit asperiores, ex
-      debitis explicabo cum blanditiis vitae! Ex quasi voluptate illum, fuga
-      doloribus esse id ea error ipsum! Tempora, facilis provident.
+      အမြို့မြို့ အနယ်နယ်သို့ ပို့​ဆောင်​ပေးပါသည်. လမ်းပမ်းဆက်သွယ်​ရေးအဆင်မ​ပြေခြင်း, ရာသီဥတု အဆင်မ​ပြေချင်းများမှအပ
+      အချိန်မ​ရွေး ပို့​ဆောင်​ပေးပါသည်. Delivery ပို့​ဆောင်​ရေး မှ မြို့များ​ပေါ်မူတည်၍အနည်းဆုံး 2ရက်, အများဆုံး
+      1ပတ်ခန့်ထိသာ ကြာမြင့်မှာ ဖြစ်ပါတယ်.
     </p>
   </section>
   <section class="mainsection">
