--- a/views/homepage.html
+++ b/views/homepage.html
@@ -80,8 +80,7 @@
     <div class="mainpage3">
       <div id="borderleft"></div>
       <h1>
-        Buying more than 1,000,000 Forever Living Products cost will be off
-        10% of the price.
+        Forever Living ထုတ်ကုန်များကို 10သိန်းနှင့်အထက်ဝယ်ယူသူများအား 10% ​လျော့​စျေးဖြင့်​ရောင်းချ​ပေး​နေပါပြီ
       </h1>
       <h3>
         We are sending and delivering our products to every town in Myanmar.
