--- a/views/delivery.html
+++ b/views/delivery.html
@@ -67,7 +67,7 @@
     <p>
       အမြို့မြို့ အနယ်နယ်သို့ ပို့​ဆောင်​ပေးပါသည်. လမ်းပမ်းဆက်သွယ်​ရေးအဆင်မ​ပြေခြင်း, ရာသီဥတု အဆင်မ​ပြေချင်းများမှအပ
       အချိန်မ​ရွေး ပို့​ဆောင်​ပေးပါသည်. Delivery ပို့​ဆောင်​ရေး မှ မြို့များ​ပေါ်မူတည်၍အနည်းဆုံး 2ရက်, အများဆုံး
-      1ပတ်ခန့်ထိသာ ကြာမြင့်မှာ ဖြစ်ပါတယ်.
+      1ပတ်ခန့်ထိသာ ကြာမြင့်မှာ ဖြစ်ပါတယ်. အိမ်တိုင်ရာ​​ရောက် ​ငွေ​ချေစနစ်ဖြင့်လည်း​ပေး​ချေလို့ရ​နေပြပြီ.
     </p>
   </section>
   <section class="mainsection">
