--- a/views/homepage.html
+++ b/views/homepage.html
@@ -75,7 +75,7 @@
   <div class="mainpage">
     <div class="mainpage2">
       <img class="dttimg" src="imgs/dtt.png" />
-      <p>Client's Happiness Is Our Goal</p>
+      <p>ဝယ်ယူအား​ပေးသူ၏ ​ပျော်ရွှင်​ရေး/ကျန်းမာ​ရေးသည်သာ အဓိကဖြစ်သည်.</p>
     </div>
     <div class="mainpage3">
       <div id="borderleft"></div>
@@ -83,12 +83,14 @@
         Forever Living ထုတ်ကုန်များကို 10သိန်းနှင့်အထက်ဝယ်ယူသူများအား 10% ​လျော့​စျေးဖြင့်​ရောင်းချ​ပေး​နေပါပြီ
       </h1>
       <h3>
-        We are sending and delivering our products to every town in Myanmar.
-        Please contact us fast; we will transfer our products to every client
-        within a week.
+        ကမ္ဘာ့အသိအမှတ်ပြုထုတ်ကုန်များကို လူကြီးမင်းတို့ သုံးဆွဲနိုင်ရန်အတွက် ယခုပဲ အမြန်ဆုံးဆက်သွယ်လိုက်ပါ!
       </h3>
     </div>
   </div>
+
+  <h1 id="dtt">Daw Thet Htar ၏ကိုယ်စားလှယ်ကြီးဖြစ်ပါသဖြင့် ယုံကြည်စိတ်ချစွာ ဝယ်ယူလို့ရ​နေပါပြီ</h1>
+
+
   <section class="toShop" id="toShop">
     <div class="TV Tleft" id="Tleft">
       <div class="cut">
@@ -110,7 +112,7 @@
         </div>
       </div>
     </div>
-    <a href="/store">To Store</a>
+    <a href="/store">စတိုးသို့သွားရန်နှိပ်ပါ</a>
   </section>
 
   <section class="deli" id="deli_id">
