--- a/views/homepage.html
+++ b/views/homepage.html
@@ -120,15 +120,9 @@
       <div class="box1">
         <img src="imgs/delivery.png" alt="" id="deli_img" />
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque
-          similique quaerat itaque temporibus, distinctio aspernatur ipsam
-          aliquid deleniti ut praesentium beatae non eius? Ipsum recusandae
-          illum voluptatem labore assumenda ipsam! Lorem ipsum, dolor sit amet
-          consectetur adipisicing elit. Nihil, mollitia? Omnis est voluptatum
-          sed quo tempora, voluptas quos, consectetur reiciendis dolor eos
-          earum itaque? Cum laudantium at quam ut aperiam! Lorem ipsum, dolor
-          sit amet consectetur adipisicing elit. minima fugie. Click here to
-          know more about
+          အမြို့မြို့ အနယ်နယ်သို့ ပို့​ဆောင်​ပေးပါသည်. လမ်းပမ်းဆက်သွယ်​ရေးအဆင်မ​ပြေခြင်း, ရာသီဥတု အဆင်မ​ပြေချင်းများမှအပ
+          အချိန်မ​ရွေး ပို့​ဆောင်​ပေးပါသည်. Delivery ပို့​ဆောင်​ရေး မှ မြို့များ​ပေါ်မူတည်၍အနည်းဆုံး 2ရက်, အများဆုံး
+          1ပတ်ခန့်ထိသာ ကြာမြင့်မှာ ဖြစ်ပါတယ်. အိမ်တိုင်ရာ​​ရောက် ​ငွေ​ချေစနစ်ဖြင့်လည်း​ပေး​ချေလို့ရ​နေပြပြီ.
           <a href="/delivery">DELIVERY</a>
         </p>
       </div>
