--- a/views/store.html
+++ b/views/store.html
@@ -65,8 +65,8 @@
     <div class="categories">
       <button id="sort">
         <div class="sort">
-          <h1>Sort by <i class="fa-solid fa-arrow-down-wide-short"></i></h1>
-          <p>Let's See what is new?</p>
+          <h1>ဆေးအမျိုးအစားခွဲရန် <i class="fa-solid fa-arrow-down-wide-short"></i></h1>
+          <p>​​ဘေးက icon ​လေးကိုနှိပ်ပါ ---> ​</p>
         </div>
       </button>
       <div class="hidden" id="subcate">
