--- a/public/css/mobile_view/homepage_mobile.css
+++ b/public/css/mobile_view/homepage_mobile.css
@@ -2,6 +2,7 @@
   .mainpage {
     flex-direction: column;
     height: auto;
+    align-items: center;
   }
 
   #borderleft {
@@ -11,13 +12,13 @@
   #toShop {
     border: 0;
     width: 100%;
-    margin: 0;
-    height: 50vh;
+    margin: 4vh 0 0 0;
+    height: 49vh;
   }
 
   #Tleft {
     margin-top: 0;
-    margin-left: 17px;
+    margin-left: 22px;
     width: 100%;
     height: 40vh;
   }
@@ -26,6 +27,40 @@
     margin-top: -30px;
     width: 90%;
     margin: auto;
+  }
+
+  #dtt {
+    background-color: rgba(0, 199, 126, 0.6);
+    margin: 3vh 1vh 0 1vh;
+    font-size: 21.5px;
+  }
+
+  .mainpage2 {
+    float: none;
+  }
+
+  .mainpage2 p {
+    border-bottom: 2px solid black;
+  }
+
+  .mainpage3 h1 {
+    margin-top: 5vh;
+    font-size: 25px;
+    background-color: aquamarine;
+    padding: 3px;
+    border-radius: 10px;
+    border-bottom: 2px solid black;
+  }
+
+  .mainpage3 h3 {
+    margin: 8vh 0 0 0;
+    border-bottom: 2px solid black;
+  }
+
+  .mainpage3 {
+    float: none;
+    border-left: none;
+    margin-left: -22px;
   }
 
   .Tright {
