--- a/views/homepage.html
+++ b/views/homepage.html
@@ -137,7 +137,7 @@
 
   <!-- https://respond.io/ -->
   <div id="dialog-4" title="In Myanmar">
-    Please Turn on VPN for Messenger support.
+    VPNခံခြင်းဖြင့် messenger support ရယူပါ
     <br />
     <br />
     <img src="imgs/messenger.png" alt="" />
@@ -158,7 +158,7 @@
         <li><a href="#">about</a></li>
         <li><a href="#">contact</a></li>
         <br />
-        <li id="smallertext"><a href="#">Contact2WebsiteDeveloper</a></li>
+        <li id="smallertext"><a href="https://www.facebook.com/move.traveller/">Contact2WebsiteDeveloper</a></li>
       </ul>
     </div>
     <div class="footer3">
@@ -170,16 +170,21 @@
 
       <ul class="icons">
         <li>
-          <a href="#"><i class="fa-brands fa-facebook fa-beat"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100088155742567"><i
+              class="fa-brands fa-facebook fa-beat"></i></a>
         </li>
         <li>
-          <a href="#"><i class="fa-brands fa-facebook-messenger fa-fade"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100088155742567"><i
+              class="fa-brands fa-facebook-messenger fa-fade"></i></a>
         </li>
         <li>
-          <a href="#"><i class="fa-solid fa-envelope fa-flip"></i></a>
+          <a
+            href="https://mail.google.com/mail/u/0/#inbox?compose=XBcJlDNFHvPCvXtSCZVpSczdbMqCsfGLvJfKwVjGqXrcxJRjJJZdFCPsKCDbGRdjMztgnSrNScJtTnkv"><i
+              class="fa-solid fa-envelope fa-flip"></i></a>
         </li>
         <li>
-          <a href="#"><i class="fa-brands fa-youtube fa-bounce"></i></a>
+          <a href="https://www.youtube.com/channel/UCg1Hq-lxtFiDxpWxJzsCvzg"><i
+              class="fa-brands fa-youtube fa-bounce"></i></a>
         </li>
       </ul>
     </div>
