--- a/views/contactus.html
+++ b/views/contactus.html
@@ -65,28 +65,17 @@
   <script src="js/navigation.js"></script>
 
   <section class="aboutus">
-    <div class="upper">
-      <div class="containerimg">
-        <h1>
-          Daw Thet Htar <br />
-          & <br />Daw Aye Myint
-        </h1>
-        <img src="imgs/dtt&me.png" alt="DawThetHtar&DawAyeMyint" />
-      </div>
-    </div>
+
     <div class="under">
       <div class="rightabout">
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati
-          autem aspernatur illum ex quas ipsa fugit, qui, necessitatibus magni
-          distinctio beatae similique ab nesciunt excepturi? Unde impedit
-          beatae officiis eos.
+        <p id="rightaboutp">
+          Forever Living ကုမ္ပဏီသည် ကမ္ဘာ့အကြီးဆုံး ရှား​စောင်းထုတ်ကုန် ထုတ်လုပ်​ရေးကုမ္ပဏီကြီးများ ထဲမှ
+          တစ်ခုအပါအဝင်ဖြစ်သည်. မြန်မာနိုင်ငံတွင်ထိုကဲ့သို့​​ဆေးများကို ကိုယ်စားလှယ်အဖြစ် ဒေါ်သက်ထားမှ ပြန်လည်
+          တင်သွင်းခွဲ​ဝေ ​ရောင်းချ​နေခဲ့ပါသည်. ​​ဒေါ်သက်ထားမှ တစ်ဆင့် ကိုယ်စားလှယ်ခွဲကြီး 8​ယောက်အဖြစ်ခွဲထားပြီး ဤ
+          ​ရွှေဓူဝံ(​ဒေါ်​အေးမြင့်)မှာ လည်း ကိုယ်စားလှယ်ခွဲကြီးတစ်​ယောက်အပါအဝင်ဖြစ်ပါသည်.
         </p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
-          tempora non dolor obcaecati, perspiciatis culpa quo, totam impedit
-          itaque ut laudantium? Molestias optio mollitia aperiam ea doloremque
-          hic perferendis aut.
+          ဤ​ဆေးများသည် ​ဒေါ်သက်ထား၏ တရားဝင် ​စျေးနှုန်းများ ဖြင့် ​ပြောင်းလဲ​ဖော်ပြထား​သော​ကြောင့် စိတ်ပူစရာမလိုပါ.
         </p>
       </div>
       <div class="leftabout">
