--- a/views/items.ejs
+++ b/views/items.ejs
@@ -62,6 +62,7 @@
   </header>
 
   <script src="/js/navigation.js"></script>
+
   <section>
     <div id="left">
       <h1>
@@ -78,6 +79,15 @@
       </p>
     </div>
   </section>
+
+  <div id="backbutton">
+    <a href="/store">
+      <button>
+        <h2>အ​နောက်သို့ပြန်သွားရန်</h2>
+      </button>
+    </a>
+  </div>
+
   <div id="dialog-4" title="In Myanmar">
     Please Turn on VPN for Messenger support.
     <br />
