--- a/views/delivery.html
+++ b/views/delivery.html
@@ -594,16 +594,21 @@
 
         <ul class="icons">
           <li>
-            <a href="#"><i class="fa-brands fa-facebook fa-beat"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100088155742567"><i
+                class="fa-brands fa-facebook fa-beat"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa-brands fa-facebook-messenger fa-fade"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100088155742567"><i
+                class="fa-brands fa-facebook-messenger fa-fade"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa-solid fa-envelope fa-flip"></i></a>
+            <a
+              href="https://mail.google.com/mail/u/0/#inbox?compose=XBcJlDNFHvPCvXtSCZVpSczdbMqCsfGLvJfKwVjGqXrcxJRjJJZdFCPsKCDbGRdjMztgnSrNScJtTnkv"><i
+                class="fa-solid fa-envelope fa-flip"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa-brands fa-youtube fa-bounce"></i></a>
+            <a href="https://www.youtube.com/channel/UCg1Hq-lxtFiDxpWxJzsCvzg"><i
+                class="fa-brands fa-youtube fa-bounce"></i></a>
           </li>
         </ul>
       </div>
