--- a/views/items.ejs
+++ b/views/items.ejs
@@ -103,14 +103,14 @@
 
     <div class="footer2">
       <ul>
-        <li><a href="#">Pages</a></li>
+        <li><a href="/">Pages</a></li>
         <br />
-        <li><a href="#">stores</a></li>
-        <li><a href="#">services</a></li>
-        <li><a href="#">about</a></li>
-        <li><a href="#">contact</a></li>
+        <li><a href="/store">stores</a></li>
+        <li><a href="/delivery">services</a></li>
+        <li><a href="/contactus">about</a></li>
+        <li><a href="/contactus">contact</a></li>
         <br />
-        <li id="smallertext"><a href="#">Contact2WebsiteDeveloper</a></li>
+        <li><a id="smallertext" href="#">Contact2WebsiteDeveloper</a></li>
       </ul>
     </div>
     <div class="footer3">
@@ -122,16 +122,21 @@
 
       <ul class="icons">
         <li>
-          <a href="#"><i class="fa-brands fa-facebook fa-beat"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100088155742567"><i
+              class="fa-brands fa-facebook fa-beat"></i></a>
         </li>
         <li>
-          <a href="#"><i class="fa-brands fa-facebook-messenger fa-fade"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100088155742567"><i
+              class="fa-brands fa-facebook-messenger fa-fade"></i></a>
         </li>
         <li>
-          <a href="#"><i class="fa-solid fa-envelope fa-flip"></i></a>
+          <a
+            href="https://mail.google.com/mail/u/0/#inbox?compose=XBcJlDNFHvPCvXtSCZVpSczdbMqCsfGLvJfKwVjGqXrcxJRjJJZdFCPsKCDbGRdjMztgnSrNScJtTnkv"><i
+              class="fa-solid fa-envelope fa-flip"></i></a>
         </li>
         <li>
-          <a href="#"><i class="fa-brands fa-youtube fa-bounce"></i></a>
+          <a href="https://www.youtube.com/channel/UCg1Hq-lxtFiDxpWxJzsCvzg"><i
+              class="fa-brands fa-youtube fa-bounce"></i></a>
         </li>
       </ul>
     </div>
