--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -83,8 +83,8 @@
 
 #dtt {
   font-size: 25px;
-  margin: 10vh 0 0 22%;
-
+  margin: 10vh 0 0 0;
+  text-align: center;
 }
 
 .toShop {
@@ -94,7 +94,7 @@
   grid-template-columns: auto auto;
   gap: 15px;
   text-align: center;
-  margin: 20vh 7%;
+  margin: 10vh 7%;
   border: 4px solid black;
   border-radius: 0 0 25px 25px;
 }
@@ -203,11 +203,11 @@
   background-image: url("../imgs/iconsdesign.png");
   background-position: center;
   background-size: 450px;
-  padding: 35px 5px 0 10px;
 }
 
 .box1 {
-  background-image: url("../imgs/iconsdesign.png");
+  padding-top: 40px;
+  background: rgba(0, 162, 203, 0.7);
 }
 
 .box img {
@@ -216,12 +216,13 @@
   float: right;
 }
 
-.box p {
+.box p,
+.box a {
+  padding: 10px;
   font-size: 2em;
   font-family: "Fjalla One", sans-serif;
   line-height: 1.6em;
   text-align: justify;
-  background-color: rgba(0, 162, 203, 0.84);
   font-weight: bold;
 }
 
@@ -230,7 +231,7 @@
   padding: 1vh 2vh;
   margin: 10px;
   background-color: rgb(0, 200, 255);
-  font-size: 1.2em;
+  font-size: 2em;
   transition: 200ms ease-in-out;
 }
 
