--- a/views/contactus.html
+++ b/views/contactus.html
@@ -63,6 +63,7 @@
     </nav>
   </header>
   <script src="js/navigation.js"></script>
+  <p class="noti">ယခုပဲဝယ်ယူလိုက်ပါ</p>
 
   <section class="aboutus">
 
