--- a/views/delivery.html
+++ b/views/delivery.html
@@ -61,6 +61,8 @@
     </nav>
   </header>
   <script src="js/navigation.js"></script>
+  <p class="noti">ယခုပဲဝယ်ယူလိုက်ပါ</p>
+
   <section class="brief">
     <h1 id="deliveryh1">Delivery?</h1>
     <p>
