--- a/public/css/mobile_view/homepage_mobile.css
+++ b/public/css/mobile_view/homepage_mobile.css
@@ -31,7 +31,7 @@
 
   #dtt {
     background-color: rgba(0, 199, 126, 0.6);
-    margin: 3vh 1vh 0 1vh;
+    margin: 3.5vh 1vh 0 1.5vh;
     font-size: 21.5px;
   }
 
@@ -44,7 +44,6 @@
   }
 
   .mainpage3 h1 {
-    margin-top: 5vh;
     font-size: 25px;
     background-color: aquamarine;
     padding: 3px;
@@ -53,8 +52,11 @@
   }
 
   .mainpage3 h3 {
-    margin: 8vh 0 0 0;
+    margin: 1vh 0 0 0;
     border-bottom: 2px solid black;
+    background-color: aquamarine;
+    border-radius: 10px;
+    padding: 3px;
   }
 
   .mainpage3 {
