--- a/public/css/store.css
+++ b/public/css/store.css
@@ -27,7 +27,7 @@ section {
 .product {
   flex: 23%;
   overflow: hidden;
-  background: white;
+  background: rgb(153 192 255);
   color: black;
   text-align: center;
   width: 240px;
@@ -74,7 +74,7 @@ section {
   height: 75vh;
   background-color: white;
   float: left;
-  margin-top: 6.5vh;
+  margin-top: 11.5vh;
 }
 
 #sort {
@@ -94,7 +94,7 @@ section {
   flex-direction: column;
 
   >h1 {
-    font-size: 3em;
+    font-size: 2.8em;
     margin: 0 0 10px 0;
 
     >i {
