--- a/views/error.html
+++ b/views/error.html
@@ -1,98 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/header.css" type="text/css" />
-    <link href="css/404.css" rel="stylesheet" type="text/css" />
-    <link
-      href="css/mobile_view/404_mobile.css"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link rel="stylesheet" href="css/header.css" />
-    <link
-      href="https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap"
-      rel="stylesheet"
-    />
-    <script
-      src="https://kit.fontawesome.com/ef09da54b9.js"
-      crossorigin="anonymous"
-    ></script>
-    <title>Error-404</title>
-  </head>
-  <body class="mainn">
-    <header>
-      <img class="logo" src="imgs/sdwlogo.png" alt="logo" />
-      <nav>
-        <button id="toggleButton"><i class="fa fa-bars"></i></button>
-        <div class="hidden">
-          <a href="/" id="active">Homepage</a><span class="bordering"></span>
-          <a href="/store">Stores</a><span class="bordering"></span>
-          <a href="/delivery">Services</a><span class="bordering"></span>
-          <a href="/contactus" style="width: auto; padding: 2.2vh 1.5vh"
-            >About & Contact</a
-          >
-        </div>
-      </nav>
-    </header>
-    <div class="message">
-      <h1>404 - The page you are looking for is not found.</h1>
-      <a href="/">Go Back to Home Page.</a>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/header.css" type="text/css" />
+  <link href="css/404.css" rel="stylesheet" type="text/css" />
+  <link href="css/mobile_view/404_mobile.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="css/header.css" />
+  <link href="https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/ef09da54b9.js" crossorigin="anonymous"></script>
+  <title>Error-404</title>
+</head>
+
+<body class="mainn">
+  <header>
+    <img class="logo" src="imgs/sdwlogo.png" alt="logo" />
+    <nav>
+      <button id="toggleButton"><i class="fa fa-bars"></i></button>
+      <div class="hidden">
+        <a href="/" id="active">Homepage</a><span class="bordering"></span>
+        <a href="/store">Stores</a><span class="bordering"></span>
+        <a href="/delivery">Services</a><span class="bordering"></span>
+        <a href="/contactus" style="width: auto; padding: 2.2vh 1.5vh">About & Contact</a>
+      </div>
+    </nav>
+  </header>
+  <div class="message">
+    <h1>404 - The page you are looking for is not found.</h1>
+    <a href="/">Go Back to Home Page.</a>
+  </div>
+  <footer>
+    <div class="footer1">
+      <h1>ShweDuWun</h1>
+      <br />
+      <h3>Medical Product Distributor</h3>
     </div>
-    <footer>
-      <div class="footer1">
-        <h1>ShweDuWun</h1>
+
+    <div class="footer2">
+      <ul>
+        <li><a href="#">Pages</a></li>
         <br />
-        <h3>Medical Product Distributor</h3>
-      </div>
+        <li><a href="#">stores</a></li>
+        <li><a href="#">services</a></li>
+        <li><a href="#">about</a></li>
+        <li><a href="#">contact</a></li>
+        <br />
+        <li id="smallertext"><a href="#">Contact2WebsiteDeveloper</a></li>
+      </ul>
+    </div>
+    <div class="footer3">
+      <font>
+        <input type="email" required placeholder="Type your Email..." />
+        <br />
+        <button type="submit">Subscribe</button>
+      </font>
 
-      <div class="footer2">
-        <ul>
-          <li><a href="#">Pages</a></li>
-          <br />
-          <li><a href="#">stores</a></li>
-          <li><a href="#">services</a></li>
-          <li><a href="#">about</a></li>
-          <li><a href="#">contact</a></li>
-          <br />
-          <li id="smallertext"><a href="#">Contact2WebsiteDeveloper</a></li>
-        </ul>
-      </div>
-      <div class="footer3">
-        <font>
-          <input type="email" required placeholder="Type your Email..." />
-          <br />
-          <button type="submit">Subscribe</button>
-        </font>
+      <ul class="icons">
+        <li>
+          <a href="#"><i class="fa-brands fa-facebook fa-beat"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fa-brands fa-facebook-messenger fa-fade"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fa-solid fa-envelope fa-flip"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fa-brands fa-youtube fa-bounce"></i></a>
+        </li>
+      </ul>
+    </div>
+    <div class="footer4">
+      <h4>Copyright@ 2023-2024</h4>
+    </div>
+  </footer>
+  <script src="js/navigation.js"></script>
+  <p class="noti">Buy NOW!</p>
+</body>
 
-        <ul class="icons">
-          <li>
-            <a href="#"><i class="fa-brands fa-facebook fa-beat"></i></a>
-          </li>
-          <li>
-            <a href="#"
-              ><i class="fa-brands fa-facebook-messenger fa-fade"></i
-            ></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa-solid fa-envelope fa-flip"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa-brands fa-youtube fa-bounce"></i></a>
-          </li>
-        </ul>
-      </div>
-      <div class="footer4">
-        <h4>Copyright@ 2023-2024</h4>
-      </div>
-    </footer>
-    <script src="js/navigation.js"></script>
-  </body>
 </html>
